# Zero-to-Wan

./: .gitignore  README.md  generate.py  pyproject.toml
data_prep/: caption_video_dir.py  download_hf_dataset.sh  precompute_video_dir_latents.py  precompute_video_dir_text_embeds.py
models/wan/: text2video.py
models/wan/modules/: model.py
scripts/: run_data_prep.sh  run_generate.sh  run_train.sh
training/: scheduler.py  train.py  training_args.py  video_dataset.py
